# gitrepodb

./: README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
gitrepodb/: gitrepodb.py
gitrepodb/sql_scripts/: init.sql
tests/: test_gitrepodb.py
